tests/rosetta/out/Pascal/abbreviations-easy.error
fpc: exit status 1
Free Pascal Compiler version 3.2.2+dfsg-32 [2024/01/05] for x86_64
Copyright (c) 1993-2021 by Florian Klaempfl and others
Target OS: Linux for x86-64
Compiling /tmp/abbreviations-easy.pas
abbreviations-easy.pas(22,11) Error: Identifier not found "_sliceString"
abbreviations-easy.pas(23,30) Fatal: String exceeds line
Fatal: Compilation aborted
Error: /usr/bin/ppcx64 returned an error exitcode
